<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">>
    <string name="app_name">Advanced settings</string>

    <string name="category_haptic_title">Haptic</string>
    <string name="vibrator_subcat_title">Vibrator</string>
    <string name="vibrator_intensity_title_head">Vibrator Intensity</string>
    <string name="vibrator_intensity_summary_head">Set vibrator intensity</string>

    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>

    <string name="category_screen_title">Screen</string>
    <string name="mdnie_subcat_title">Colors</string>
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe Scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe Mode</string>
    <string name="mdnie_negative_title_head">Negative Mode</string>
    <string name="mdnie_negative_summary_head">Enable/Disable inverted colors</string>

    <string name="led_subcat_title">Notification LED</string>
    <string name="led_fade_title_head">LED Fading</string>
    <string name="led_fade_summary_head">Enable LED smooth fading instead of sharp blinking.</string>

    <string name="spen_subcat_title">S-Pen</string>
    <string name="spen_power_save_title_head">S-Pen Power Saving Mode</string>
    <string name="spen_power_save_summary_head">Disable stylus digitizer when S-Pen is in device</string>

    <string name="touchkey_subcat_title">Touchkeys</string>
    <string name="touchkey_light_title_head">Backlight</string>
    <string name="touchkey_light_summary_off">Enable backlight</string>
    <string name="touchkey_light_summary_on">Disable backlight</string>
    <string name="touchkey_timeout_title_head">Backlight timeout</string>
    <string name="touchkey_timeout_summary_head">Set timeout for the backlight</string>
</resources>
