<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
                android:title="@string/mdnie_subcat_title">
    <!-- mDNIe Scenario modes -->
    <com.cyanogenmod.settings.device.mDNIeScenario
	        android:key="mdnie_scenario"
	        android:title="@string/mdnie_scenario_title_head"
	        android:summary="@string/mdnie_scenario_summary_head"
	        android:entries="@array/mdnie_scenario_entries"
  			android:entryValues="@array/mdnie_scenario_entries_values"
  			android:defaultValue="0" />

    <!-- mDNIe Mode -->
    <com.cyanogenmod.settings.device.mDNIeMode
	        android:key="mdnie_mode"
	        android:title="@string/mdnie_mode_title_head"
	        android:summary="@string/mdnie_mode_summary_head"
	        android:entries="@array/mdnie_mode_entries"
  			android:entryValues="@array/mdnie_mode_entries_values"
  			android:defaultValue="0" />

    <!-- mDNIe Negative mode -->
    <com.cyanogenmod.settings.device.mDNIeNegative
	        android:key="mdnie_negative"
	        android:title="@string/mdnie_negative_title_head"
	        android:summary="@string/mdnie_negative_summary_head"
	        android:entries="@array/mdnie_negative_entries"
  			android:entryValues="@array/mdnie_negative_entries_values"
  			android:defaultValue="0" />
    </PreferenceCategory>

    <PreferenceCategory
                android:title="@string/led_subcat_title">
    <!-- LED fading mode -->
    <com.cyanogenmod.settings.device.LedFade
                android:key="led_fade"
                android:title="@string/led_fade_title_head"
                android:summary="@string/led_fade_summary_head"
                android:entries="@array/led_fade_entries"
                        android:entryValues="@array/led_fade_entries_values"
                        android:defaultValue="1" />
    </PreferenceCategory>

    <PreferenceCategory
                android:title="@string/spen_subcat_title">
    <!-- SPen power saving mode -->
    <com.cyanogenmod.settings.device.SPenPowerSavingMode
                android:key="spen_power_save"
                android:title="@string/spen_power_save_title_head"
                android:summary="@string/spen_power_save_summary_head" />
    </PreferenceCategory>

    <PreferenceCategory
                android:title="@string/touchkey_subcat_title">
    <!-- Touchkey backlight -->
    <CheckBoxPreference
                android:key="touchkey_light"
                android:title="@string/touchkey_light_title_head"
                android:summaryOff="@string/touchkey_light_summary_off"
                android:summaryOn="@string/touchkey_light_summary_on"
                android:defaultValue="true"
                />
    <com.cyanogenmod.settings.device.TouchkeyTimeout
                android:key="touchkey_timeout"
                android:title="@string/touchkey_timeout_title_head"
                android:summary="@string/touchkey_timeout_summary_head"
                android:entries="@array/touchkey_timeout_entries"
                android:entryValues="@array/touchkey_timeout_entries_values"
                android:defaultValue="3" />
    </PreferenceCategory>

</PreferenceScreen>
